Remove separator lines in lists (#8164)

--- a/ui/common/src/main/res/values/styles.xml
+++ b/ui/common/src/main/res/values/styles.xml
@@ -283,8 +283,20 @@
         <item name="android:lineHeight" tools:targetApi="p">20sp</item>
     </style>
 
+    <style name="AntennaPod.TextView.FeedListItemPrimaryTitle" parent="@style/TextAppearance.Material3.BodyLarge">
+        <item name="android:maxLines">2</item>
+        <item name="android:ellipsize">end</item>
+        <item name="lineHeight">20sp</item>
+        <item name="android:lineHeight" tools:targetApi="p">20sp</item>
+    </style>
+
     <style name="AntennaPod.TextView.ListItemSecondaryTitle" parent="@style/TextAppearance.Material3.BodyMedium">
         <item name="android:textColor">?attr/colorOnSurfaceVariant</item>
+        <item name="android:lines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="AntennaPod.TextView.FeedListItemSecondaryTitle" parent="@style/TextAppearance.Material3.LabelSmall">
         <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
     </style>
